--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
 	"version": "0.0.0",
 	"private": true,
 	"scripts": {
-		"start": "node ./bin/www"
+		"start": "node ./bin/www",
+		"debug": "node --debug ./bin/www"
 	},
 	"dependencies": {
 		"express": "~4.10.6",
@@ -16,4 +17,5 @@
 		"mongoose": "*",
 		"q": "*"
 	}
+	
 }
